--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,11 +1,12 @@
 {
   "manifest_version": 3,
   "name": "Bahamut VSCode Reader",
-  "version": "2.0",
+  "version": "2.5",
   "description": "Bahamut in vscode",
   "content_scripts": [
     {
       "matches": [
+        "*://forum.gamer.com.tw/",
         "*://forum.gamer.com.tw/C.php*",
         "*://forum.gamer.com.tw/B.php*"
       ],
