--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,8 +1,22 @@
 {
   "manifest_version": 3,
   "name": "Bahamut VSCode Reader",
-  "version": "2.5",
+  "version": "2.6",
   "description": "Bahamut in vscode",
+  "permissions": ["storage", "activeTab"],
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "icon16.png",
+      "48": "icon48.png",
+      "128": "icon128.png"
+    }
+  },
+  "icons": {
+    "16": "icon16.png",
+    "48": "icon48.png",
+    "128": "icon128.png"
+  },
   "content_scripts": [
     {
       "matches": [
